# detalog

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
detalog/: handlers.py
tests/: test_handlers.py
