[tool.poetry]
name = "detalog"
version = "0.1.0"
description = "Logger for awesome Deta Space applications based on awesome PingBack events aggregator"
authors = ["mamsdeveloper <butvin.mihail@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
deta = {extras = ["async"], version = "^1.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
